--- a/index.html
+++ b/index.html
@@ -3,20 +3,33 @@
     <head>
         <title>ToDo List</title>
         <script type="text/javascript" src="./js/app.js"></script>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
-        <div id="master">
+        <div id="master" align="center">
             <div id="heading1">
                 <h1>Let's Manage your daily tasks</h1>
             </div>
 
+            <br>
+
             <div id="tasks">
-                <!-- Curently this will be empty-->
+                <ul id="task_list">
+                    <!-- Curently this will be empty-->
+                </ul>
             </div>
 
+            <br>
+
             <div id="add">
-                <input type="text" name="task" id="task"><br>
+                <input type="text" name="task" id="task" placeholder="Add new task here"><br>
                 <input type="button" name="add_task" onclick="add_new_task(task.value);" value="Add"> <!-- <img src="./images/add_task.png" height="50px" width="80px" onclick="add_new_task();"> --->
             </div>
         </div>
