--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </ul>
             </div>
 
-            <br>
+            <!---- <br> -->
 
             <div id="add">
-                <input type="text" name="task" id="task" placeholder="Add new task here"><br>
+                <input type="text" name="task" id="task" placeholder="Add new task here" required><br>
                 <input type="button" name="add_task" onclick="add_new_task(task.value);" value="Add"> <!-- <img src="./images/add_task.png" height="50px" width="80px" onclick="add_new_task();"> --->
             </div>
         </div>
