--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div id="add">
                 <input type="text" name="task" id="task" placeholder="Add new task here" required><br>
-                <input type="button" name="add_task" onclick="add_new_task(task.value);" value="Add"> <!-- <img src="./images/add_task.png" height="50px" width="80px" onclick="add_new_task();"> --->
+                <input type="button" name="add_task" onclick="add_new_task(task.value);" value="Add">
             </div>
         </div>
     </body>
